<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/x80"
        android:layout_marginRight="@dimen/x80"
        android:background="@drawable/shape_round_corner_bg_white"
        android:paddingBottom="@dimen/y48">

        <TextView
            android:id="@+id/dialog_tip_layout_title"
            style="@style/Text_16sp_2b2d2e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x48"
            android:layout_marginTop="@dimen/y40"
            android:gravity="center"
            android:text="@string/user_nickname_setting"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/dialog_tip_layout_content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_tip_layout_title">

            <EditText
                android:id="@+id/dialog_tip_layout_edit_text"
                style="@style/Text_16sp_2b2d2e"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/tip_user_nickname_modify_once"
                app:layout_constraintLeft_toLeftOf="parent"
                android:singleLine="true"
                android:ellipsize="end"
                android:background="@null"
                app:layout_constraintRight_toLeftOf="@+id/m_dialog_tip_layout_empty_imageview"/>

            <ImageView
                android:id="@+id/m_dialog_tip_layout_empty_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/empty"
                app:layout_constraintTop_toTopOf="@+id/dialog_tip_layout_edit_text"
                app:layout_constraintBottom_toBottomOf="@+id/dialog_tip_layout_edit_text"
                app:layout_constraintRight_toRightOf="parent"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/y2"
                android:background="@color/color_eeeeee"
                android:layout_marginTop="@dimen/y16"
                app:layout_constraintTop_toBottomOf="@+id/dialog_tip_layout_edit_text"/>

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/dialog_tip_layout_left_button"
            style="@style/Text_16sp_a3a5a6"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y76"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:text="@string/cancle"
            app:layout_constraintBaseline_toBaselineOf="@+id/dialog_tip_layout_right_button"
            app:layout_constraintRight_toLeftOf="@+id/dialog_tip_layout_right_button" />

        <TextView
            android:id="@+id/dialog_tip_layout_right_button"
            style="@style/Text_16sp_2b2d2e"
            android:layout_width="0dp"
            android:layout_height="@dimen/y76"
            android:layout_marginRight="22dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_round_corner_solid_ffc400"
            android:gravity="center"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/action_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_tip_layout_content_container" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>

