<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x80"
            android:layout_marginRight="@dimen/x80"
            android:background="@drawable/shape_round_corner_bg_white"
            android:paddingBottom="@dimen/y48">

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/x48"
                android:layout_marginTop="@dimen/y40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_tip_layout_title"
                    style="@style/Text_16sp_2b2d2e"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="提示"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/dialog_tip_layout_close"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="@dimen/x48"
                    android:padding="7dp"
                    android:src="@drawable/dialog_close"
                    app:layout_constraintBottom_toBottomOf="@+id/dialog_tip_layout_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/dialog_tip_layout_title" />

            </LinearLayout>
            <View
                android:id="@+id/dialog_tip_layout_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y1"
                android:layout_marginTop="@dimen/y32"
                android:background="@color/color_f4f4f4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_tip_layout_title" />


            <FrameLayout
                android:id="@+id/dialog_tip_layout_content_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y32"
                android:paddingLeft="@dimen/x48"
                android:paddingRight="@dimen/x48"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_tip_layout_divider">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dialog_tip_layout_message"
                        style="@style/Text_16sp_2b2d2e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tip_send_verification_code" />

                    <com.baseapp.common.view.PinEntryEditText
                        android:id="@+id/dialog_tip_layout_password_edit_text"
                        style="@style/Text_13sp_2b2d2e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:cursorVisible="true"
                        android:digits="0123456789"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="6"
                        android:textIsSelectable="false"
                        app:pinBackgroundDrawable="@color/color_f4f4f4"
                        app:pinCharacterSpacing="2dp" />
                </LinearLayout>


            </FrameLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/y48"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dialog_tip_layout_left_button"
                    style="@style/Text_16sp_f5a623"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/y76"
                    android:layout_marginLeft="@dimen/x48"
                    android:layout_marginRight="@dimen/x24"
                    android:background="@drawable/shape_corner_2_stroke_f5a623_solid_ffffff"
                    android:gravity="center"
                    android:paddingRight="12dp"
                    android:paddingStart="12dp"
                    android:text="@string/action_resend"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/dialog_tip_layout_right_button" />

                <TextView
                    android:id="@+id/dialog_tip_layout_right_button"
                    style="@style/Text_16sp_2b2d2e"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/y76"
                    android:layout_marginLeft="@dimen/x24"
                    android:layout_marginRight="@dimen/x48"
                    android:background="@drawable/shape_round_corner_solid_ffc400"
                    android:gravity="center"
                    android:text="@string/action_ok"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toRightOf="@+id/dialog_tip_layout_left_button"
                    app:layout_constraintRight_toRightOf="parent" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>